continuation token in listgroups api
