# contract/src/main/java/io/pravega/schemaregistry/contract/v1/ApiV1.java
@@ -38,6 +38,7 @@ import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.Response;
 
 public class ApiV1 {
@@ -235,7 +236,8 @@ public class ApiV1 {
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 200, message = "List of all groups", response = GroupsList.class),
                 @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching the list of Groups", response = Void.class)})
-        Response listGroups();
+        Response listGroups(@ApiParam(value = "Continuation token") @QueryParam("continuationToken") String continuationToken,
+                            @ApiParam(value = "The numbers of items to return") @QueryParam("limit") Integer limit);
 
         @PUT
         @Path("/{groupName}/rules")
